force-app/main/default/objects/Quote/fields/Account_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Industry__c</fullName>
    <formula>Opportunity.Account.subindustry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Sub Industry</label>
    <type>Text</type>
</CustomField>