force-app/main/default/objects/Quote/fields/ActiveSpaFormula__c.field-meta.xml
<CustomField>
    <fullName>ActiveSpaFormula__c</fullName>
    <formula>ExpirationDate &gt; today()-45 &amp;&amp;
  (text(Status ) == &apos;Approved&apos; ||
    text(Status ) == &apos;Needs Review&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ActiveSpaFormula</label>
    <type>Checkbox</type>
</CustomField>