force-app/main/default/objects/Quote/fields/Approval_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>Approval_TimeStamp__c</fullName>
    <description>Time of latest approval so the edi feed to Partners can be triggered</description>
    <label>Approval TimeStamp</label>
    <type>Time</type>
</CustomField>