force-app/main/default/objects/Quote/fields/ApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ApprovalProcess</label>
    <type>Checkbox</type>
</CustomField>