force-app/main/default/objects/Quote/fields/Are_they_leading_exclusively_with_ViewSo__c.field-meta.xml
<CustomField>
    <fullName>Are_they_leading_exclusively_with_ViewSo__c</fullName>
    <label>Are they leading exclusively with ViewSo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>