force-app/main/default/objects/Quote/fields/Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto Renew Flag</description>
    <label>Auto_Renew</label>
    <type>Checkbox</type>
</CustomField>