force-app/main/default/objects/Quote/fields/Auto_Renew_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew_End_Date__c</fullName>
    <description>End Date for Auto Renewal request (2 Years from Approval Date)</description>
    <label>Auto_Renew_End_Date</label>
    <type>DateTime</type>
</CustomField>