force-app/main/default/objects/Quote/fields/Auto_Renew_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew_Start_Date__c</fullName>
    <description>Start Date from Auto Renewal Approval</description>
    <label>Auto_Renew_Start_Date</label>
    <type>DateTime</type>
</CustomField>