force-app/main/default/objects/Quote/fields/Bid_Desk_Special_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bid_Desk_Special_Notes__c</fullName>
    <label>Bid Desk Special Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>