force-app/main/default/objects/Quote/fields/Bid_Desk_to_PM_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bid_Desk_to_PM_Notes__c</fullName>
    <label>Bid Desk to  PM Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>