force-app/main/default/objects/Quote/fields/Bid_Registered__c.field-meta.xml
<CustomField>
    <fullName>Bid_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bid Registered</label>
    <type>Checkbox</type>
</CustomField>