force-app/main/default/objects/Quote/fields/Bid_Spa__c.field-meta.xml
<CustomField>
    <fullName>Bid_Spa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bird Spa</label>
    <type>Checkbox</type>
</CustomField>