force-app/main/default/objects/Quote/fields/BidDesk_Focus_Account__c.field-meta.xml
<CustomField>
    <fullName>BidDesk_Focus_Account__c</fullName>
    <description>Notifies bid desk of focus account.</description>
    <formula>(Opportunity.Account.Focus_Account__c = true ||
Opportunity.Account.End_User_Focus__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BidDesk Focus Account</label>
    <type>Checkbox</type>
</CustomField>