force-app/main/default/objects/Quote/fields/BR_Discount_Approved__c.field-meta.xml
<CustomField>
    <fullName>BR_Discount_Approved__c</fullName>
    <label>BR % Discount Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>