force-app/main/default/objects/Quote/fields/BR_End_User_Contact__c.field-meta.xml
<CustomField>
    <fullName>BR_End_User_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BR End User Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (BR End User Contact)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>