force-app/main/default/objects/Quote/fields/BR_ManagerId__c.field-meta.xml
<CustomField>
    <fullName>BR_ManagerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manager for the rep that submitted a BR request. This is used in the approval process for BR to route to manager</description>
    <label>BR ManagerId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>