force-app/main/default/objects/Quote/fields/BR_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>BR_Meeting_Date__c</fullName>
    <label>BR Meeting Date</label>
    <type>Date</type>
</CustomField>