force-app/main/default/objects/Quote/fields/BR_Rep_that_did_meeting__c.field-meta.xml
<CustomField>
    <fullName>BR_Rep_that_did_meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BR Rep that did meeting</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes3</relationshipName>
    <type>Lookup</type>
</CustomField>