force-app/main/default/objects/Quote/fields/BR_Resellers_OverRide__c.field-meta.xml
<CustomField>
    <fullName>BR_Resellers_OverRide__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows multiple resellers to be on BR</description>
    <inlineHelpText>Allows multiple resellers to be on BR</inlineHelpText>
    <label>BR Resellers OverRide</label>
    <type>Checkbox</type>
</CustomField>