force-app/main/default/objects/Quote/fields/Business_Reason_for_Bid_Registration__c.field-meta.xml
<CustomField>
    <fullName>Business_Reason_for_Bid_Registration__c</fullName>
    <label>BR Business Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>