force-app/main/default/objects/Quote/fields/Bypass_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Demo - Bypass Trigger</label>
    <type>Checkbox</type>
</CustomField>