force-app/main/default/objects/Quote/fields/Conference_Room_Software__c.field-meta.xml
<CustomField>
    <fullName>Conference_Room_Software__c</fullName>
    <label>Conference Room Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Conference_Room_Software</valueSetName>
    </valueSet>
</CustomField>