force-app/main/default/objects/Quote/fields/EDI_Approval_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>EDI_Approval_Date_Time__c</fullName>
    <label>EDI Approval Date Time</label>
    <type>DateTime</type>
</CustomField>