force-app/main/default/objects/Quote/fields/Emails__c.field-meta.xml
<CustomField>
    <fullName>Emails__c</fullName>
    <formula>if(text(Opportunity.Owner.UserType) == &apos;Standard&apos;,

substitute(&apos;,&apos;&amp;Owner:User.Email&amp;&apos;,&apos;&amp;
Opportunity.Owner.Email&amp;&apos;,&apos;&amp;
Spa_Request_Submitter__r.Email&amp;&apos;,&apos;&amp;
Resubmitter__r.Email,&apos;jason.orbison@viewsonic.com,&apos;,&apos;&apos;), 

substitute(
Spa_Request_Submitter__r.Email&amp;&apos;,&apos;&amp;
Resubmitter__r.Email,&apos;jason.orbison@viewsonic.com,&apos;,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emails</label>
    <type>Text</type>
</CustomField>