force-app/main/default/objects/Quote/fields/Emails_Overwrite_Quote_Email__c.field-meta.xml
<CustomField>
    <fullName>Emails_Overwrite_Quote_Email__c</fullName>
    <label>Emails Overwrite Quote Email</label>
    <type>TextArea</type>
</CustomField>