force-app/main/default/objects/Quote/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <formula>Opportunity.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User</label>
    <type>Text</type>
</CustomField>