force-app/main/default/objects/Quote/fields/End_User_Account__c.field-meta.xml
<CustomField>
    <fullName>End_User_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used with a trigger to give a related list of spas (quotes) on the account page</description>
    <label>End User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>