force-app/main/default/objects/Quote/fields/End_User_Demos__c.field-meta.xml
<CustomField>
    <fullName>End_User_Demos__c</fullName>
    <formula>Opportunity.End_User_Company__c &amp; &apos; &apos;&amp; Opportunity.End_User_City__c &amp; &apos; &apos;&amp;  Opportunity.Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User Demos</label>
    <type>Text</type>
</CustomField>