force-app/main/default/objects/Quote/fields/First_Time_Buyer__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Time Buyer</label>
    <type>Checkbox</type>
</CustomField>