force-app/main/default/objects/Quote/fields/Focus_Account__c.field-meta.xml
<CustomField>
    <fullName>Focus_Account__c</fullName>
    <description>This field is used in triggering alerts. The owner of account and created by keeps from email alerts being sent to Account owner when they created a quote for their account.</description>
    <formula>(Opportunity.Account.Focus_Account__c = true ||
Opportunity.Account.End_User_Focus__c )
&amp;&amp;
CreatedById != Opportunity.Account.OwnerId &amp;&amp; CreatedDate &gt; now()-180</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Focus Account</label>
    <type>Checkbox</type>
</CustomField>