force-app/main/default/objects/Quote/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <label>Freight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dock to dock</fullName>
            </value>
            <value>
                <fullName>Inside delivery</fullName>
            </value>
            <value>
                <fullName>Limited access</fullName>
            </value>
            <value>
                <fullName>All Inclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>