force-app/main/default/objects/Quote/fields/Hot_Swap_Approved_Or_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Hot_Swap_Approved_Or_Rejected__c</fullName>
    <description>Field to determine if the HotSwap is Approved or Rejected.</description>
    <label>Hot Swap Approved Or Rejected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending For Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>