force-app/main/default/objects/Quote/fields/Hot_Swap_Requested__c.field-meta.xml
<CustomField>
    <fullName>Hot_Swap_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check Box to Know if this SPA has Hot Swap Requested or Not</description>
    <label>Hot Swap Requested</label>
    <type>Checkbox</type>
</CustomField>