force-app/main/default/objects/Quote/fields/Hotswap_Items__c.field-meta.xml
<CustomField>
    <fullName>Hotswap_Items__c</fullName>
    <label>Hotswap_Items</label>
    <type>TextArea</type>
</CustomField>