force-app/main/default/objects/Quote/fields/In_Approval_Review__c.field-meta.xml
<CustomField>
    <fullName>In_Approval_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Approval Review</label>
    <type>Checkbox</type>
</CustomField>