force-app/main/default/objects/Quote/fields/In_Hot_Swap_Review__c.field-meta.xml
<CustomField>
    <fullName>In_Hot_Swap_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to Identify if the SPA is in Hot Swap Request Approval Review</description>
    <label>In Hot Swap Review</label>
    <type>Checkbox</type>
</CustomField>