force-app/main/default/objects/Quote/fields/Info_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Info_Requested_Date__c</fullName>
    <label>Info Requested Date</label>
    <type>Date</type>
</CustomField>