force-app/main/default/objects/Quote/fields/isInactive__c.field-meta.xml
<CustomField>
    <fullName>isInactive__c</fullName>
    <formula>if(text(Status) == &apos;Inactive&apos;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isInactive</label>
    <type>Checkbox</type>
</CustomField>