force-app/main/default/objects/Quote/fields/List_of_Work_Activity_c__c.field-meta.xml
<CustomField>
    <fullName>List_of_Work_Activity_c__c</fullName>
    <label>BR List of Work</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>