force-app/main/default/objects/Quote/fields/Mobile_Created__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for a pilot program to allow some sales to create quotes via the salesforce app. This has been restricted because vital information is often missing in the Spa, specifically Opportunity Child Records, Including Distributors, Resellers, Products, and Price Books. This field will allow us to audit users submissions and revoke on a case by case basis.</description>
    <label>Mobile Created</label>
    <type>Checkbox</type>
</CustomField>