force-app/main/default/objects/Quote/fields/My_Spas__c.field-meta.xml
<CustomField>
    <fullName>My_Spas__c</fullName>
    <description>formula to determine if. I am owner, submitter or resubmitted of a spa</description>
    <formula>$User.Id ==  Resubmitter__c || $User.Id == OwnerId || $User.Id ==  Spa_Request_Submitter__c</formula>
    <label>My Spas</label>
    <type>Checkbox</type>
</CustomField>