force-app/main/default/objects/Quote/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Next Steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo Unit to be shipped</fullName>
            </value>
            <value>
                <fullName>Field rep engagement to be scheduled</fullName>
            </value>
            <value>
                <fullName>RFP release date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>