force-app/main/default/objects/Quote/fields/Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount__c</fullName>
    <formula>Opportunity.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>