force-app/main/default/objects/Quote/fields/Opportunity_IsLocked__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_IsLocked__c</fullName>
    <formula>Opportunity.Record_is_Locked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity IsLocked</label>
    <type>Checkbox</type>
</CustomField>