force-app/main/default/objects/Quote/fields/Opportunity_Partner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Partner</label>
    <referenceTo>Opportunity_Partner__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>