force-app/main/default/objects/Quote/fields/OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityName__c</fullName>
    <formula>Opportunity.Opportunity_Name__c</formula>
    <label>OpportunityName</label>
    <type>Text</type>
</CustomField>