force-app/main/default/objects/Quote/fields/PM_Approval__c.field-meta.xml
<CustomField>
    <fullName>PM_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PM Approval</label>
    <type>Checkbox</type>
</CustomField>