force-app/main/default/objects/Quote/fields/PriceBookId__c.field-meta.xml
<CustomField>
    <fullName>PriceBookId__c</fullName>
    <formula>CASESAFEID(Opportunity.Pricebook2Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriceBookId</label>
    <type>Text</type>
</CustomField>