force-app/main/default/objects/Quote/fields/Project_or_Site_Info__c.field-meta.xml
<CustomField>
    <fullName>Project_or_Site_Info__c</fullName>
    <formula>Opportunity.Project_or_Site_Information__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project or Site Info</label>
    <type>Text</type>
</CustomField>