force-app/main/default/objects/Quote/fields/Protection_Requested__c.field-meta.xml
<CustomField>
    <fullName>Protection_Requested__c</fullName>
    <label>% Protection Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>