force-app/main/default/objects/Quote/fields/Re_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Submission_Date__c</fullName>
    <description>Date of submission or resubmission</description>
    <formula>if(isblank(Resubmission_Date__c ),CreatedDate, Resubmission_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Re)Submission Date</label>
    <type>Date</type>
</CustomField>