force-app/main/default/objects/Quote/fields/Reason_For_Hotswap__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Hotswap__c</fullName>
    <description>Reason to be entered for Hotswap Request</description>
    <label>Reason For Hotswap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>