force-app/main/default/objects/Quote/fields/Reason_For_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Renewal__c</fullName>
    <description>Reason For SPA Auto Renewal Request</description>
    <label>Reason_For_Renewal</label>
    <length>250</length>
    <type>Text</type>
</CustomField>