force-app/main/default/objects/Quote/fields/Recent_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Approval_Date__c</fullName>
    <formula>if(isblank( Resubmission_Approval_Date__c ),  Approval_Date__c , Resubmission_Approval_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recent Approval Date</label>
    <type>Date</type>
</CustomField>