force-app/main/default/objects/Quote/fields/RecentRequest__c.field-meta.xml
<CustomField>
    <fullName>RecentRequest__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecentRequest</label>
    <type>DateTime</type>
</CustomField>