force-app/main/default/objects/Quote/fields/record_is_locked__c.field-meta.xml
<CustomField>
    <fullName>record_is_locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>record is locked</label>
    <type>Checkbox</type>
</CustomField>