force-app/main/default/objects/Quote/fields/RejectedApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>RejectedApprovalProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>starts process of rejection approval processes</description>
    <label>RejectedApprovalProcess</label>
    <type>Checkbox</type>
</CustomField>