force-app/main/default/objects/Quote/fields/Reseller_Direct__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Direct__c</fullName>
    <formula>Pricebook2.Name != &apos;VSA Distributor Price List&apos; &amp;&amp; text(Opportunity.Country__c) = &apos;United States&apos; &amp;&amp; text(CreatedBy.VS_Sub_Region__c) != &apos;VSA LA&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Direct</label>
    <type>Checkbox</type>
</CustomField>