force-app/main/default/objects/Quote/fields/Reseller_Spa_Email_Text__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Spa_Email_Text__c</fullName>
    <label>Reseller Spa Email Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>