force-app/main/default/objects/Quote/fields/Resellers__c.field-meta.xml
<CustomField>
    <fullName>Resellers__c</fullName>
    <formula>Opportunity.Resellers_and_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resellers</label>
    <type>Text</type>
</CustomField>