force-app/main/default/objects/Quote/fields/Resubmission_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Resubmission_Approval_Date__c</fullName>
    <label>Resubmission Approval Date</label>
    <type>Date</type>
</CustomField>