force-app/main/default/objects/Quote/fields/Resubmission_Date__c.field-meta.xml
<CustomField>
    <fullName>Resubmission_Date__c</fullName>
    <label>Resubmission Date</label>
    <type>DateTime</type>
</CustomField>