force-app/main/default/objects/Quote/fields/Resubmission_Note_Log__c.field-meta.xml
<CustomField>
    <fullName>Resubmission_Note_Log__c</fullName>
    <label>Resubmission Note Log</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>