force-app/main/default/objects/Quote/fields/Resubmission_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resubmission_Notes__c</fullName>
    <label>Resubmission Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>