force-app/main/default/objects/Quote/fields/Resubmitter__c.field-meta.xml
<CustomField>
    <fullName>Resubmitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resubmitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>