force-app/main/default/objects/Quote/fields/Resubmitter_Email__c.field-meta.xml
<CustomField>
    <fullName>Resubmitter_Email__c</fullName>
    <label>Resubmitter Email</label>
    <type>Email</type>
</CustomField>