force-app/main/default/objects/Quote/fields/Roll_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Roll_Out_Date__c</fullName>
    <formula>Opportunity.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roll Out Date</label>
    <type>Date</type>
</CustomField>