force-app/main/default/objects/Quote/fields/Sales_Ops_Emails__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ops_Emails__c</fullName>
    <description>only has data when the sales opps add button is clicked</description>
    <label>Sales Ops Emails</label>
    <length>200</length>
    <type>Text</type>
</CustomField>