force-app/main/default/objects/Quote/fields/Scope_of_Bid_Registration__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Bid_Registration__c</fullName>
    <label>BR Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>