force-app/main/default/objects/Quote/fields/Shipping_and_Receiving_Information__c.field-meta.xml
<CustomField>
    <fullName>Shipping_and_Receiving_Information__c</fullName>
    <label>Shipping and Receiving Information</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dock to accommodate a 53&apos; trailer</fullName>
            </value>
            <value>
                <fullName>Forklift on site</fullName>
            </value>
            <value>
                <fullName>Pallet jack only</fullName>
            </value>
            <value>
                <fullName>Shipping to multiple locations</fullName>
            </value>
            <value>
                <fullName>Forward facing pallets</fullName>
            </value>
            <value>
                <fullName>Inside delivery</fullName>
            </value>
            <value>
                <fullName>Lift gate needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>