force-app/main/default/objects/Quote/fields/Spa_Email_Approval_Text_II__c.field-meta.xml
<CustomField>
    <fullName>Spa_Email_Approval_Text_II__c</fullName>
    <label>Email Approval Text</label>
    <length>1500</length>
    <type>Html</type>
</CustomField>