force-app/main/default/objects/Quote/fields/Spa_Name__c.field-meta.xml
<CustomField>
    <fullName>Spa_Name__c</fullName>
    <formula>HYPERLINK(Id, Opportunity.Name,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spa Name</label>
    <type>Text</type>
</CustomField>