force-app/main/default/objects/Quote/fields/Spa_Request_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Spa_Request_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spa Request Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>