force-app/main/default/objects/Quote/fields/Spa_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Spa_Request_Type__c</fullName>
    <defaultValue>&quot;Spa Request&quot;</defaultValue>
    <label>Spa Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spa Request</fullName>
            </value>
            <value>
                <fullName>Bid Register Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>