force-app/main/default/objects/Quote/fields/Spa_Stage__c.field-meta.xml
<CustomField>
    <fullName>Spa_Stage__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spa Stage</label>
    <type>Text</type>
</CustomField>