force-app/main/default/objects/Quote/fields/SpaId__c.field-meta.xml
<CustomField>
    <fullName>SpaId__c</fullName>
    <formula>Opportunity.SPA_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SpaId</label>
    <type>Text</type>
</CustomField>