force-app/main/default/objects/Quote/fields/Special_Approval__c.field-meta.xml
<CustomField>
    <fullName>Special_Approval__c</fullName>
    <label>Special Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Manager</fullName>
            </value>
            <value>
                <fullName>VP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>