force-app/main/default/objects/Quote/fields/Special_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Approval_Notes__c</fullName>
    <label>Special Approval Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>